--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="D:\Nokia\20230912_180931.jpg" alt="Omar Khaled" width="500">
+            <img src="20230912_180931.jpg" alt="Omar Khaled" width="500">
             <h1>Omar Khaled</h1>
             <p>Junior Machine Learning Engineer</p>
             
